<resources>
    <string name="app_name">MultiGame</string>
    <string name="bvn">Welcome !</string>
    <string name="btnvalider">Valider!</string>
    <string name="btnname">Nom</string>
    <string name="btnprenom">prenom</string>
    <string name="btnage">Age</string>
    <string name="btnville">Localisation</string>
    <string name="btnjoueur">Joueurs</string>
    <string name="nomjoueur">nom</string>
    <string name="prenomjoueur">prenom</string>
    <string name="tempsrestant">Temps restant : %d secondes</string>
    <string name="taporlongtap">%d </string>
    <string name="score">Score : %d </string>
    <string name="nomdujeu">%d</string>
    <string name="quitter">Quitter</string>
    <string name="menu">Menu</string>
    <string name="insert_nb">Nombre</string>
    <string name="nb_essaie">Il vous reste %d essais</string>
    <string name="indicator_plus">C"est plus !</string>
    <string name="indicator_moins">C"est moins !</string>
    <string name="splashScreenTitle">A Mydigital School Project</string>
    <string name="settingsTitle">Settings</string>
    <string name="SettingsScoreRow">%d</string>
    <string name="namegamescore">%d</string>
    <string name="deconnexion">deconnexion</string>
    <string name="profillocalisation">%d</string>
    <string name="profilage">%d</string>
    <string name="profilnom">%d</string>
    <string name="profilprenom">%d</string>
</resources>
