<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gametap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/timeleft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempsrestant"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/taptextchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taporlongtap"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        />

</LinearLayout>