<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/liste_score"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/deconnexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/deconnexion"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/ButtonAlternativeColor"

        />
    <Button
        android:id="@+id/quitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/quitter"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/ButtonAlternativeColor"

        />

</LinearLayout>