<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreatePlayerActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFrame" />


    <FrameLayout
        android:id="@+id/pink_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bvn"
            android:textSize="40sp"
            android:textStyle="bold"
      android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pink_frame"
        android:layout_marginTop="-40dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:src="@drawable/avatar_placeholder" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:src="@drawable/avatar_placeholder"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                />


        </RelativeLayout>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnname"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <EditText
            android:id="@+id/input_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnprenom"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <EditText
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnage"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/input_ville"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/btnville"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

      <ImageView
            android:id="@+id/iconlocalisation"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:maxWidth="40dp"
          android:maxHeight="40dp"
          android:src="@drawable/localisation"
          />
    </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_joueur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/btn"
            android:text="@string/btnjoueur"
            android:textSize="30sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

        <Button
            android:id="@+id/btn_valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/btn"
            android:text="@string/btnvalider"
            android:textSize="30sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />

    </LinearLayout>


</RelativeLayout>