<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profil"
        android:textAlignment="center"
        android:textSize="40dp" />

    <LinearLayout
        android:id="@+id/player_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/profilimg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:maxWidth="80dp"
            android:maxHeight="80dp"
            android:src="@drawable/avatar_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilnom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/profilnom"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/profilprenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/profilprenom"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/profilage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/profilage"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profillocalisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:text="@string/profillocalisation"
        android:textAlignment="textStart"
        android:textSize="20sp" />
    />

    <Button
        android:id="@+id/btn_modifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modifier le joueur"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <Button
        android:id="@+id/btn_supprimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Supprimer le joueur"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>